--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
     "url": "https://github.com/aichbauer/express-rest-api-boilerplate/issues"
   },
   "scripts": {
-    "prestart": "npm run drop-sqlite-db || true",
-    "start": "npm run nodemon",
-    "poststart": "npm run create-sqlite-db",
-    "dev": "cross-env NODE_ENV=development node ./api/api.js",
-    "nodemon": "nodemon --exec npm run dev",
     "create-sqlite-db": "shx touch ./db/database.sqlite",
+    "dev": "cross-env NODE_ENV=development node ./dist/api/api.js",
     "drop-sqlite-db": "shx rm ./db/database.sqlite",
     "lint": "eslint ./api/. ./config/. ./test/.",
+    "nodemon": "nodemon --exec npm babel-node -- ./api/api.js",
+    "poststart": "npm run create-sqlite-db",
     "prepush": "npm test",
+    "prestart": "npm run drop-sqlite-db || true",
     "pretest": "npm run lint",
     "production": "cross-env NODE_ENV=production node ./api/api.js",
+    "start": "npm run nodemon",
     "test": "npm run create-sqlite-db; cross-env NODE_ENV=testing jest --coverage; npm run drop-sqlite-db",
-    "test-ci": "jest --coverage --forceExit"
+    "test-ci": "jest --coverage --forceExit",
+    "transpile-api": "babel ./api --out-dir dist/api",
+    "transpile-config": "babel ./config --out-dir dist/config",
+    "transpile": "npm run transpile-api && yarn transpile-config"
   },
   "jest": {
     "globals": {
@@ -35,20 +38,30 @@
       "/node_modules/"
     ]
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
-    "core-js": "^2.6.9",
+    "core-js": "^3.8.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-routes-mapper": "^1.0.2",
     "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.1",
     "mariadb": "^2.5.2",
+    "regenerator-runtime": "^0.13.7",
     "sequelize": "^6.0.0",
     "sqlite3": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.13",
+    "@babel/core": "^7.12.13",
+    "@babel/node": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
     "cross-env": "^5.1.4",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "14.2.1",
