updated dockerfile and compose file to run transpiling, cleaned up scripts in package.json, put model/controller/route flow together, added working return all users endpoint, added postman collection for testing api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       NODE_ENV: development
       DEBUG: nodejs-docker-express:*
-    command: yarn nodemon
+    command: yarn start
   db:
     image: mariadb
     container_name: mariadb
