--- a/package.json
+++ b/package.json
@@ -18,11 +18,21 @@
     "start": "npm run nodemon",
     "transpile-api": "babel ./api --out-dir dist/api",
     "transpile-config": "babel ./config --out-dir dist/config",
-    "transpile": "echo \"\\x1b[104m\\x1b[97m\n[ Running transpile ]\n\\x1b[0m\" ; npm run transpile-api ; npm run transpile-config"
+    "transpile": "echo \"\\x1b[104m\\x1b[97m\n[ Running transpile ]\n\\x1b[0m\" ; npm run transpile-api ; npm run transpile-config",
+    "prepush": "npm test",
+    "pretest": "npm run lint",
+    "test": "npm run cross-env NODE_ENV=testing jest --coverage",
+    "test-ci": "jest --coverage --forceExit",
+    "test:watch": "jest --watch"
   },
   "babel": {
     "presets": [
       "@babel/preset-env"
+    ]
+  },
+  "jest": {
+    "modulePaths": [
+      "./"
     ]
   },
   "dependencies": {
@@ -45,14 +55,17 @@
     "@babel/core": "^7.12.13",
     "@babel/node": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
+    "babel-jest": "^26.6.0",
     "cross-env": "^5.1.4",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "husky": "^0.14.3",
     "jest": "^24.8.0",
     "nodemon": "^2.0.7",
+    "sequelize-mock": "^0.10.2",
     "shx": "^0.2.2",
-    "supertest": "^3.0.0"
+    "supertest": "^6.1.3"
   }
 }
